tests/golden/component-prometheus/sigstore-policy-controller/sigstore-policy-controller/01_helm_chart/policy-controller/templates/webhook/clusterrolebindings_webhook.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/instance: syn-sigstore-policy-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: policy-controller
    app.kubernetes.io/version: 0.13.1
    control-plane: syn-sigstore-policy-controller-webhook
    helm.sh/chart: policy-controller-0.10.5
  name: syn-sigstore-policy-controller-webhook
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: syn-sigstore-policy-controller-webhook
subjects:
  - kind: ServiceAccount
    name: syn-sigstore-policy-controller-webhook
    namespace: syn-sigstore-policy-controller
