tests/golden/component-prometheus/sigstore-policy-controller/sigstore-policy-controller/01_helm_chart/policy-controller/templates/webhook/configmap-clusterimagepolicy.yaml
apiVersion: v1
data:
  _example: |
    #######################################
    #                                     #
    #    EXAMPLE CONFIGURATION            #
    #                                     #
    #                                     #
    # cluster-image-policy-json: '{"images":[{"glob":"ghcr.io/example/*","regex":""}],"authorities":[{"key":{"data":"-----BEGIN PUBLIC KEY-----\\nMFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAExB6+H6054/W1SJgs5JR6AJr6J35J\\nRCTfQ5s1kD+hGMSE1rH7s46hmXEeyhnlRnaGF8eMU/SBJE/2NKPnxE7WzQ==\\n-----END PUBLIC KEY-----"}}]}'
    #######################################
kind: ConfigMap
metadata:
  name: config-image-policies
  namespace: syn-sigstore-policy-controller
