tests/golden/component-prometheus/sigstore-policy-controller/sigstore-policy-controller/01_helm_chart/policy-controller/templates/webhook/poddisruptionbudget.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    app.kubernetes.io/instance: syn-sigstore-policy-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: policy-controller
    app.kubernetes.io/version: 0.13.1
    control-plane: syn-sigstore-policy-controller-webhook
    helm.sh/chart: policy-controller-0.10.7
  name: syn-sigstore-policy-controller-webhook
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: syn-sigstore-policy-controller
      app.kubernetes.io/name: policy-controller
      control-plane: syn-sigstore-policy-controller-webhook
